--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,9 @@ org.gradle.parallel=true
 # RoundaLib Properties
 group_id=me.roundaround
 mod_id=volumefix
-mod_version=1.1.0
-minecraft_version=1.20
-yarn_mappings=build.1
-loader_version=0.14.21
-mod_menu_version=7.0.0
+mod_version=1.2.0
+minecraft_version=1.21
+yarn_mappings=build.2
+loader_version=0.15.11
+fabric_version=0.100.3
+mod_menu_version=11.0.0
