--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,9 @@ org.gradle.parallel=true
 group_id=me.roundaround
 mod_id=volumefix
 mod_version=1.2.0
-minecraft_version=1.21
-yarn_mappings=build.2
-loader_version=0.15.11
-fabric_version=0.100.3
-mod_menu_version=11.0.0
+minecraft_version=1.21.6
+yarn_mappings=build.1
+loader_version=0.16.14
+fabric_version=0.127.1
+mod_menu_version=15.0.0-beta.2
+dev_login_version=3.5
